syntax = "proto3";

package rivet.backend.pkg.cluster.msg.server_undrain;

import "proto/common.proto";
import "proto/backend/cluster.proto";

/// name = "msg-cluster-server-undrain"
/// parameters = [
/// 	{ name = "cluster_id" },
/// 	{ name = "datacenter_id" },
/// 	{ name = "server_id" },
/// ]
message Message {
    rivet.common.Uuid cluster_id = 1;
    rivet.common.Uuid datacenter_id = 2;
    rivet.common.Uuid server_id = 5;
    rivet.backend.cluster.PoolType pool_type = 4;
}
